# chappie

./: .env  Cargo.toml  README.md  docker-compose.yml
.github/workflows/: ci.yml
chappie-adapter/: Cargo.toml
chappie-adapter/sql/: createProject.sql  createTicket.sql  createUser.sql  createUserProject.sql  deleteUserProject.sql  findTicket.sql  getTicketList.sql
chappie-adapter/src/: helper.rs  lib.rs  modules.rs
chappie-adapter/src/model/: helper.rs  mod.rs  project.rs  ticket.rs  user.rs  user_project.rs
chappie-adapter/src/persistence/: database.rs
chappie-adapter/src/repository/: helper.rs  mod.rs  project.rs  ticket.rs  user.rs  user_project.rs
chappie-app/: Cargo.toml
chappie-app/src/: helper.rs  lib.rs
chappie-app/src/model/: helper.rs  mod.rs  project.rs  ticket.rs  user.rs  user_project.rs
chappie-app/src/usecase/: project.rs  ticket.rs  user.rs  user_project.rs
chappie-driver/: Cargo.toml
chappie-driver/src/model/: project.rs  ticket.rs  user.rs  user_project.rs
chappie-driver/src/module/: mod.rs
chappie-driver/src/routes/: mod.rs  porject.rs  ticket.rs  user.rs  user_project.rs
chappie-driver/src/startup/: mod.rs
chappie-driver/tests/: create_user_api.rs
chappie-kernel/: Cargo.toml
chappie-kernel/src/model/: mod.rs  project.rs  ticket.rs  user.rs  user_project.rs
chappie-kernel/src/repository/: mod.rs  project.rs  ticket.rs  user.rs  user_project.rs
json/: project.json  project_without_parent.json  ticket.json  ticket_without_parent.json  user.json  user_project.json
migrations/: 20230817125832_chappie.sql  20230817125832_chappie_drop.sql  down.sql
