[package]
name = "chappie-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chappie-adapter = { path = "../chappie-adapter" }
chappie-kernel = { path = "../chappie-kernel" }
chrono = "0.4.26"
derive-new = "0.5.9"
tokio = { version = "1.32.0", features = ["full"] }
